src/test/deca/context/invalid/langage_sans_objet/troisieme_passe/regle_3_17_1.deca
{
    int a;
    int a;
}
// raison : operation partielle.
// message : Variable 'a' already declared